--- a/src/components/sideBar/SideBar.scss
+++ b/src/components/sideBar/SideBar.scss
@@ -15,6 +15,7 @@
     position: relative;
     top: 10px;
     width: 90%;
+    margin-bottom: 50px;
     .cardUserId {
       padding-left: 40px;
       text-align: start;
